# doc-mind

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  README.md  REFACTOR_REVIEW.md  pyproject.toml  requirements.txt
predocs/: 2026-05-12-knowledge-agent-api-design-v1.md  2026-05-12-knowledge-agent-architecture-v1.md  2026-05-12-knowledge-agent-data-model-v1.md  2026-05-12-knowledge-agent-mvp-prd.md  2026-06-22-product-specification.md  flags-2026-06-07_10-01.md
reviews/: codex_2026-06-05_10-29.md  codex_2026-06-05_17-56.md  comments-memory.md
scripts/: reembed.py  reindex.py
server/: config.py  database.py  main.py  schemas.py
server/middleware/: auth.py
server/models/: __init__.py  base.py  collection.py  conversation.py  document.py  job.py  tag.py
server/routers/: chat.py  collections.py  config.py  conversations.py  documents.py  jobs.py  memories.py  search.py  tags.py
server/services/: anysearch.py  auto_tagger.py  bookmark_parser.py  chunker.py  embedder.py  llm.py  memory.py  memory_manager.py  memory_md_exporter.py  memory_store.py  observer.py  parser.py  pipeline.py  rag.py  registry.py  reranker.py  retriever.py  scanner.py  search.py  tag_utils.py  url_fetcher.py  web_search.py  worker.py
server/templates/: index.html
server/tests/: conftest.py  test_auto_tagger.py  test_chunker.py  test_config.py  test_conversation_model.py  test_database.py  test_document_model.py  test_embedder.py  test_format_xlsx.py  test_job_model.py  test_llm.py  test_memory.py  test_memory_manager.py  test_memory_md_exporter.py  test_memory_store.py  test_rag.py  (+8 more)
(+27 files in other folders)
