[project]
name = "knowledge-base"
version = "0.1.0"
description = "Personal knowledge base with AI-powered Q&A"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "chromadb>=0.5.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "markitdown>=0.0.1",
    "openai>=1.50.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
    "pytesseract>=0.3.0",
    "Pillow>=10.0.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["server*"]
